; ModuleID = '/home/carl/AnghaBench/kilo/extr_kilo.c_disableRawMode.c'
source_filename = "/home/carl/AnghaBench/kilo/extr_kilo.c_disableRawMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@E = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@TCSAFLUSH = common dso_local global i32 0, align 4
@orig_termios = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disableRawMode(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @E, i32 0, i32 0), align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @TCSAFLUSH, align 4
  %8 = call i32 @tcsetattr(i32 %6, i32 %7, i32* @orig_termios)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @E, i32 0, i32 0), align 8
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @tcsetattr(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
